[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'oklab'
version = '0.3.0'
description = "lightweight python implementation of Björn Ottosson's oklab colour space"
readme = 'readme.md'
license = 'MIT'
requires-python = ">=3.8"
authors = [
    { name = 'deftasparagusanaconda' }
]
keywords = [
    'color',
    'colour',
    'oklab',
    'oklch',
]
dependencies = []

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
]

[project.scripts]
oklab = "cli:oklab_main"
oklch = "cli:oklch_main"

[tool.hatch.build.targets.wheel]
include = [
	"oklab.py",
	"cli.py",
]

[project.urls]
Homepage = 'https://github.com/deftasparagusanaconda/oklab'
Repository = 'https://github.com/deftasparagusanaconda/oklab'
Issues = 'https://github.com/deftasparagusanaconda/oklab/issues'
